(feat) Add menu item, full backend/frontend tests and implemenetation
